# iris

./: .dockerignore  .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/iris-sound-recognition/: Dockerfile  README.md  pyproject.toml
apps/iris-sound-recognition/src/iris_sound_recognition/: __init__.py  classifier.py  server.py
apps/iris-speaker-id/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/iris-speaker-id/src/iris_speaker_id/: __init__.py  server.py
apps/iris-voice/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/iris-voice/src/iris_voice/: __init__.py  agent_bridge.py  agent_completion_events.py  api_client.py  audio.py  audio_activity.py  audio_gain.py  completion_delivery_scheduler.py  env.py  ffmpeg_avfoundation_input.py  llm_events.py  local_audio.py  mac_voice_processing.py  pipeline.py  prompt.py  response_policy.py  runtime_events.py  server.py  session.py  sound_recognition.py  speaker_identity.py  speech_emotion.py  stt_audio_gate.py  tool_schemas.py  tools.py  transcript_types.py  transcripts.py  tts.py  voice_filters.py  xai_tts.py
apps/iris-voice/src/iris_voice/observability/: __init__.py  frame_diagnostics.py  observers.py
apps/iris-voice/src/iris_voice/transport/: __init__.py  device.py
apps/iris-voice/src/iris_voice/turns/: __init__.py  barge_in.py  playback_echo.py  playback_wake_gate.py  timing.py  wake.py
decision-log/: 2026-06-01-agent-completion-notifications.md  2026-06-01-voice-agent-prompt-boundary.md  2026-06-04-native-voice-sound-effects.md  (+7 more)
(+115 files in other folders)
