[project]
name = "iris-sound-recognition"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.124.0",
  "loguru>=0.7.3",
  "numpy>=2.3.0",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
models = [
  "torch>=2.11.0,<2.12.0",
  "torchaudio>=2.11.0,<2.12.0",
  "transformers>=5.8.0",
]

[project.scripts]
iris-sound-recognition = "iris_sound_recognition.server:main"

[tool.uv]
package = true
