[project]
name = "iris-voice"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "ably>=2.1.0",
  "certifi>=2026.4.22",
  "fastapi>=0.124.0",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pipecat-ai[deepgram,google,silero]==1.2.1",
  "uvicorn[standard]>=0.38.0",
]

[project.scripts]
iris-voice = "iris_voice.server:main"

[tool.uv]
package = true
